<resources>
    <string name="app_name">You Cultured?</string>
    <string name="take_the_cultured_quiz">Find out how cultured you are! </string>
    <string name="quiz">Quiz!</string>
    <string name="title_activity_question">Question</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="question">Question</string>
    <string name="choice1">Choice1</string>
    <string name="choice2">Choice2</string>
    <string name="choice3">Choice3</string>
    <string name="choice4">Choice4</string>
    <string name="next_question">Next Question</string>
    <string name="make_choice">You must PICK ONE answer! </string>
    <string name="title_activity_bottom_navigate">BottomNavigate</string>
    <string name="title_left">Home</string>
    <string name="title_mid">Quiz</string>
    <string name="title_right">Settings</string>
    <string name="link_success">Settings successfully applied!</string>
    <string name="link_fail">Settings NOT successfully applied! Try again! </string>
    <string name="accuracyntime"> Answer all the questions as FAST as possible! </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">8/10</string>
    <string name="yourscoreis">Your Score Is:</string>
    <string name="title_activity_show_scores">ShowScoresActivity</string>
    <string name="tab_text_1">Results</string>
    <string name="tab_text_2">Questions/Answers</string>
    <string name="fail_to_access"> Unable to Establish a Connection, Make Sure You Have Access To Internet </string>

</resources>
